deployment/dev/07-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: archetype-svc
  namespace: archetype-dev
  labels:
    app: archetype
spec:
  type: ClusterIP
  selector:
    app: archetype
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
